--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,3 +3,6 @@
 ProjectID=7F08611D4FE0A3A90AE756B614384416
 ProjectName=Spacewar
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BlueprintNativizationMethod=Disabled
+
