Added UI and better slingshot

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,6 +4,7 @@
 GameDefaultMap=/Game/DefaultMap.DefaultMap
 EditorStartupMap=/Game/DefaultMap.DefaultMap
 GlobalDefaultGameMode=/Game/MySpacewarGameModeBase.MySpacewarGameModeBase_C
+bUseSplitscreen=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
