--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -5,4 +5,7 @@ ProjectName=Spacewar
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BlueprintNativizationMethod=Disabled
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+bCookMapsOnly=True
 
