Added panic input action

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,14 +77,16 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Shoot-Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
-+ActionMappings=(ActionName="Shoot-Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
-+ActionMappings=(ActionName="Thruster-Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
-+ActionMappings=(ActionName="Thruster-Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
-+AxisMappings=(AxisName="RotateRight-Player1",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="RotateRight-Player1",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="RotateRight-Player2",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="RotateRight-Player2",Scale=-1.000000,Key=Left)
++ActionMappings=(ActionName="Shoot_Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="Shoot_Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
++ActionMappings=(ActionName="Thruster_Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="Thruster_Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="Panic_Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="Panic_Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
++AxisMappings=(AxisName="RotateRight_Player1",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="RotateRight_Player1",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="RotateRight_Player2",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="RotateRight_Player2",Scale=-1.000000,Key=Left)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
