Added controller support for player 2

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -77,16 +77,20 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="Shoot_Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
-+ActionMappings=(ActionName="Shoot_Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
-+ActionMappings=(ActionName="Thruster_Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
-+ActionMappings=(ActionName="Thruster_Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
-+ActionMappings=(ActionName="Panic_Player1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
-+ActionMappings=(ActionName="Panic_Player2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
-+AxisMappings=(AxisName="RotateRight_Player1",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="RotateRight_Player1",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="RotateRight_Player2",Scale=1.000000,Key=Right)
-+AxisMappings=(AxisName="RotateRight_Player2",Scale=-1.000000,Key=Left)
++ActionMappings=(ActionName="KB_ShootP1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
++ActionMappings=(ActionName="KB_ShootP2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Up)
++ActionMappings=(ActionName="KB_Thruster_P1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=S)
++ActionMappings=(ActionName="KB_Thruster_P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Down)
++ActionMappings=(ActionName="KB_Panic_P1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="KB_Panic_P2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightControl)
++ActionMappings=(ActionName="C_Thruster_P1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftTriggerAxis)
++ActionMappings=(ActionName="C_Shoot_P1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTriggerAxis)
++ActionMappings=(ActionName="C_Panic_P1",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++AxisMappings=(AxisName="KB_RotateRight_P1",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="KB_RotateRight_P1",Scale=-1.000000,Key=A)
++AxisMappings=(AxisName="KB_RotateRight_P2",Scale=1.000000,Key=Right)
++AxisMappings=(AxisName="KB_RotateRight_P2",Scale=-1.000000,Key=Left)
++AxisMappings=(AxisName="C_RotateRight_P1",Scale=1.000000,Key=Gamepad_LeftX)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
